# todo_auth

./: .dockerignore  .env.example  Dockerfile  Pipfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: auth.pipeline.yml  test.yml
migrations/: env.py
migrations/versions/: 90eb9193607b_initial.py  d3ca4e1971f1_create_users_table.py  df23e2dcb900_initial.py
src/: main.py
src/application/: dependencies.py
src/application/use_cases/: base.py  interfaces.py  token.py  users.py
src/domain/entities/: auth.py  token.py  users.py
src/domain/exceptions/: base.py  exceptions.py  repositories.py  token.py  users.py
src/domain/models/: users.py
src/domain/utils/: password.py  token.py
src/infrastructure/: config.py
src/infrastructure/managers/: database.py
src/infrastructure/middlewares/auth_middleware/: init.py  middleware.py
src/infrastructure/models/: users.py
src/infrastructure/permissions/: base.py  users.py
src/infrastructure/repositories/: base.py  interfaces.py  users.py
src/infrastructure/uow/: base.py  users.py
src/migrations/: env.py
src/migrations/data/: init.py
src/migrations/versions/: 5538975fa7f8_create_users_table.py  6cfba1258a63_create_table_users.py  8745c3f45ddc_create_table_users.py  8fea99a36a22_create_user_table.py  d2944c2baa95_create_users_table.py  de56520f04d3_create_users_table.py
src/presentation/: routers.py
src/presentation/api/: routers.py
src/presentation/api/v1/: auth.py  token.py  users.py
src/tests/: api_tests.py  conftest.py  factories.py  mock.py
src/tests/schema/: schema.py
(+4 files in other folders)
