[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["NistsiukAlexandr"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
passlib = "^1.7.4"
pyjwt = "^2.8.0"
bcrypt = "4.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
faker = "^22.7.0"
pytest-asyncio = "^0.23.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
asyncio_mode="auto"
